--- a/src/Services/Catalog/eShopOnMicroservices.Catalog.API/eShopOnMicroservices.Catalog.Api.csproj
+++ b/src/Services/Catalog/eShopOnMicroservices.Catalog.API/eShopOnMicroservices.Catalog.Api.csproj
@@ -6,12 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Security\eShopOnMicroservices.pfx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
   </ItemGroup>
 
 </Project>
